--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -69,7 +69,6 @@ main{
     /* positioning */
     z-index: 5;
     position: fixed;
-    left: 0.5rem;
      /* top: 0; */
     top: 50%;
     transform: translateY(-50%);
@@ -106,4 +105,10 @@ border: 1px solid rgba(255, 255, 255, 0.45);
 
 section{
     min-height: 100vh;
+}
+
+
+.yellow-bar:hover {
+    opacity: 1;
+    transition: all 0.25s;
 }
