added mail capability

--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -41,7 +41,7 @@
 
                     <div class="phone-input">
                         <!-- <label for="phone">Phone Number</label><br> -->
-                        <input type="number" id="phone" formControlName="phone"
+                        <input type="text" id="phone" formControlName="phone"
                             placeholder="Phone Number"
                             [class.invalid]="checkInvalid('phone')"
                             class="text-input input-standard"><br>
