--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,18 +1,19 @@
 <div class="page background-white">
         <div class="page-container">
-                <div class="header"  data-aos="fade-in" data-aos-duration="2000">
+                <div class="header" data-aos="fade-in" data-aos-duration="2000">
                         <h1>About</h1>
                 </div>
 
                 <main class="card-standard p-1">
 
                         <img data-aos="fade-right" data-aos-duration="2000"
-                                src="https://source.unsplash.com/random/200x200?black,male,portrait/"
+                                src="https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/personal%2Fwhatsapp_profile.jpg?alt=media&token=5c51fe4e-f937-4d4f-bcef-9fe9eadb57c1"
                                 alt="carousel-img">
 
                         <!-- <div class="yellow-bar"></div> -->
 
-                        <div class="about-text-container" data-aos="fade-left" data-aos-duration="2000">
+                        <div class="about-text-container" data-aos="fade-left"
+                                data-aos-duration="2000">
                                 <p class="about-text">Lorem ipsum dolor sit amet
                                         consectetur
                                         adipisicing
