--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -11,7 +11,7 @@
                     </li>
                     <li>
                         <a [routerLink]="['/home']" fragment="hero">
-                            Version 2023 (construction in progress)&nbsp;&#9881;
+                            Version 2023
                         </a>
                     </li>
                 </ul>
