--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -47,7 +47,7 @@
 
                 <div class="image-box">
                     <img
-                        src="assets/portrait1.png"
+                        src="assets/portrait.png"
                         alt="carousel-img">
                 </div>
 
