about and project section data driven

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,23 @@
 <div class="page">
     <div class="yellow-bar">
-        <div class="section" [routerLink]="['/home']" [matTooltip]="'Home'" [matTooltipPosition]="'right'"> <fa-icon [icon]="faHome" style="font-size: 8px;"></fa-icon></div>
-        <div class="section" [routerLink]="['/home']" fragment="about" [matTooltip]="'About'" [matTooltipPosition]="'right'"><fa-icon [icon]="faUser" style="font-size: 8px;"></fa-icon></div>
+        <div class="section" [routerLink]="['/home']" [matTooltip]="'Home'"
+            [matTooltipPosition]="'right'"> <fa-icon [icon]="faHome"
+                style="font-size: 8px;"></fa-icon></div>
+        <div class="section" [routerLink]="['/home']" fragment="about"
+            [matTooltip]="'About'" [matTooltipPosition]="'right'"><fa-icon
+                [icon]="faUser" style="font-size: 8px;"></fa-icon></div>
         <!-- <div class="section" [routerLink]="['/home']"
             fragment="education-certification" [matTooltip]="'Education/Certification'" [matTooltipPosition]="'right'"><fa-icon [icon]="faSchool" style="font-size: 8px;"></fa-icon></div> -->
         <div class="section" [routerLink]="['/home']"
-            fragment="projects-experience" [matTooltip]="'Project/Experience'" [matTooltipPosition]="'right'"><fa-icon [icon]="faProject" style="font-size: 8px;"></fa-icon></div>
-        <div class="section" [routerLink]="['/home']" fragment="articles" [matTooltip]="'Articles'" [matTooltipPosition]="'right'"><fa-icon [icon]="faNewspaper" style="font-size: 8px;"></fa-icon></div>
-        <div class="section" [routerLink]="['/home']" fragment="contact" [matTooltip]="'Contact'" [matTooltipPosition]="'right'"><fa-icon [icon]="faPhone" style="font-size: 8px;"></fa-icon></div>
+            fragment="projects-experience" [matTooltip]="'Project/Experience'"
+            [matTooltipPosition]="'right'"><fa-icon [icon]="faProject"
+                style="font-size: 8px;"></fa-icon></div>
+        <div class="section" [routerLink]="['/home']" fragment="articles"
+            [matTooltip]="'Articles'" [matTooltipPosition]="'right'"><fa-icon
+                [icon]="faNewspaper" style="font-size: 8px;"></fa-icon></div>
+        <div class="section" [routerLink]="['/home']" fragment="contact"
+            [matTooltip]="'Contact'" [matTooltipPosition]="'right'"><fa-icon
+                [icon]="faPhone" style="font-size: 8px;"></fa-icon></div>
     </div>
 
     <header>
