--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -7,14 +7,14 @@
                 <main class="card-standard p-1">
 
                         <img data-aos="fade-right" data-aos-duration="2000"
-                                src="https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/personal%2Fwhatsapp_profile.jpg?alt=media&token=5c51fe4e-f937-4d4f-bcef-9fe9eadb57c1"
+                                [src]="about.imgUrl"
                                 alt="carousel-img">
 
                         <!-- <div class="yellow-bar"></div> -->
 
                         <div class="about-text-container" data-aos="fade-left"
                                 data-aos-duration="2000">
-                                <p class="about-text">Lorem ipsum dolor sit amet
+                                <!-- <p class="about-text">Lorem ipsum dolor sit amet
                                         consectetur
                                         adipisicing
                                         elit. Ut
@@ -29,7 +29,10 @@
                                         officia
                                         dolorum explicabo
                                         iure ipsam?
-                                </p>
+                                </p> -->
+                                <div [innerHTML]="about.template"
+                                        [class]="about.class"
+                                        [style]="about.style"></div>
                         </div>
 
                 </main>
