--- a/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.css
+++ b/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.css
@@ -1,4 +1,16 @@
-img {
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
+.desc-container {
+  padding: 0px 10px 10px 10px;
 }
+
+.item-container {
+  padding: 10px;
+}
+
+.project-title:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+/* .project-card {
+  height: 60vh;
+} */
