--- a/src/app/home/projects-experience/projects-experience.component.css
+++ b/src/app/home/projects-experience/projects-experience.component.css
@@ -1,189 +1,137 @@
-.page{
-    /* height: 100vh; */
-    display: grid;
-    padding: 2rem 10px 4rem 10px;
+.page {
+  /* height: 100vh; */
+  display: grid;
+  padding: 2rem 10px 4rem 10px;
 }
 
-
-
-header>h1::after{
-    content: "";
-    height: 2px;
-    width: 3rem;
-    background: var(--main-colour);
-    display: block;
-    margin: 0 auto 1rem auto;
+header > h1::after {
+  content: "";
+  height: 2px;
+  width: 3rem;
+  background: var(--main-colour);
+  display: block;
+  margin: 0 auto 1rem auto;
 }
 
-
-.showcase-grid{
-    
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(3, 1fr);
-    height: 100%;
+.showcase-grid {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+  height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
-.showcase-grid>*:first-child{
-grid-column: span 2;
-background: #242443;
-color: #fff;
+.showcase-grid > *:first-child {
+  grid-column: span 2;
+  background: #242443;
+  color: #fff;
 }
 
 .card {
-    /* background: #fff; */
-    background: var(--light-colour);
-    padding: 1rem;
-  }
+  /* background: #fff; */
+  background: var(--light-colour);
+  padding: 1rem;
+}
 
-  .project-links{
-    padding:1rem 0;
-  }
+.project-links {
+  padding: 1rem 0;
+}
 
-  ul{
-    display: flex;
-    justify-content: center;
-    /* grid-template-columns: 1fr 1fr; */
-  }
+ul {
+  display: flex;
+  justify-content: center;
+  /* grid-template-columns: 1fr 1fr; */
+}
 img {
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
 }
-  main{
-    /* background-image: url(../../../assets/gradient-connection-background_52683-118589.avif); */
-  }
-  .min-5{
-    min-height: 500px;
-  }
+main {
+  /* background-image: url(../../../assets/gradient-connection-background_52683-118589.avif); */
+}
+.min-5 {
+  min-height: 500px;
+}
 
-  .title-action {
-    margin-bottom: 20px;
-  }
-  .title-action>button{
-    cursor: pointer;
-    background: orange;
-  }
+.title-action {
+  margin-bottom: 20px;
+}
+.title-action > button {
+  cursor: pointer;
+  background: orange;
+}
 
-  .title-action>button:hover{
-    cursor: pointer;
-    background: #FED8B1;
-  }
+.title-action > button:hover {
+  cursor: pointer;
+  background: #fed8b1;
+}
 
-  .card{
-    background: transparent;
-    color: white;
-    height: fit-content;
-    margin-block: auto;
-  }
+.card {
+  background: transparent;
+  color: white;
+  height: fit-content;
+  margin-block: auto;
+}
 
-  .project-carousel{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-template-rows: 1fr;
-    overflow: hidden;
-    gap: 2rem;
-    place-content: center;
-  }
+.project-carousel {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: 1fr;
+  overflow: hidden;
+  gap: 2rem;
+  place-content: center;
+}
 
-  .scroll{
-    height: 2rem;
-  }
+.scroll {
+  height: 2rem;
+}
 
-  .star-rating{
-    height: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 4px;
-  }
+.star-rating {
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+}
 
-  /* .rating-5>*:nth-child(-n+5){
-    background: orange;
-      }
-      .rating-4>*:nth-child(-n+4){
-        background: orange;
-          }
-          .rating-3>*:nth-child(-n+3){
-            background: orange;
-              }
-              .rating-2>*:nth-child(-n+2){
-                background: orange;
-                  }
-                                        
-  .rating-1>*:nth-child(-n+1){
-background: orange;
-  } */
+.container-swiper {
+  max-width: 90vw;
+  margin: 0 auto;
+  padding: 10px;
+}
+.star {
+  color: orange;
+  fill: orange;
+}
 
+.project-carousel {
+  position: relative;
+}
 
-  .container-swiper {
-    max-width: 90vw;
-    margin: 0 auto;
-    padding: 10px;
-  }
-  .star {
-    color: orange;
-    fill: orange;
-  }
-  .desc-container {
-    padding: 0px 10px 10px 10px;
-  }
-  .item-container {
-    padding: 10px;
-  }
+.scroll {
+  height: 100%;
+  width: 5rem;
+  display: grid;
+  color: white;
+  place-content: center;
+  background: rgba(0, 0, 0, 0.6);
+}
 
-  .project-carousel{
-    position: relative;
-  }
+.left-scroll {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
-  .scroll{
-    height: 100%;
-    width: 5rem;
-    display: grid;
-    color: white;
-    place-content: center;
-    background: rgba(0, 0, 0, 0.6);
-  }
+.right-scroll {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 
-  .left-scroll{
-    position: absolute;
-    top: 0;
-    left:0;
-  }
-
-  .right-scroll{
-    position: absolute;
-    top: 0;
-    right:0;
-  }
-  /* .scroll::before{
-    content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-        z-index: 1;
-  } */
-
-  /* header{
-    /* background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat 20% 30% / cover; */
-    /* background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat center center/ cover;
-    position: relative;
-    height: 100vh;
-    display: grid;
-    z-index: 3;
-    }
-    header::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-        z-index: 1; */
-    /* } */ 
+.carousel-container {
+  display: grid;
+  grid-template-rows: 1fr;
+}
