--- a/src/app/home/projects-experience/projects-experience.component.html
+++ b/src/app/home/projects-experience/projects-experience.component.html
@@ -12,72 +12,22 @@
 
                 </button>
             </div>
+            <mat-progress-spinner mode="indeterminate"
+                *ngIf="loadingProjects"
+                style="margin-inline: auto;"></mat-progress-spinner>
             <div class="container-swiper">
                 <swiper
                     [breakpoints]="breakpoints"
                     [spaceBetween]="30"
                     [direction]="'horizontal'"
                     [loop]="true"
-                    [autoHeight]="true"
                     [centeredSlides]="true"
                     [speed]="5000"
                     [allowTouchMove]="true"
                     [autoplay]="{ delay: 0, disableOnInteraction: false }">
-                    <ng-container *ngFor="let data of [0,1,2,3]">
+                    <ng-container *ngFor="let project of projects">
                         <ng-template swiperSlide>
-                            <div class="card-standard color-black">
-                                <div class="image-star-rating">
-                                    <img
-                                        src="https://source.unsplash.com/random/200x200?react,code,design/"
-                                        alt="carousel-img">
-                                    <div class="item-container">
-                                        <h3>project_Title</h3>
-
-                                        <div class="star-rating rating-5">
-                                            <svg class="star"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                height="1em"
-                                                viewBox="0 0 576 512"><path
-                                                    d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" /></svg>
-                                            <svg class="star"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                height="1em"
-                                                viewBox="0 0 576 512"><path
-                                                    d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" /></svg>
-                                            <svg class="star"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                height="1em"
-                                                viewBox="0 0 576 512"><path
-                                                    d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" /></svg>
-                                            <svg class="star"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                height="1em"
-                                                viewBox="0 0 576 512"><path
-                                                    d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" /></svg>
-                                            <svg class="star"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                height="1em"
-                                                viewBox="0 0 576 512"><path
-                                                    d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" /></svg>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="desc-container">
-                                    <div class="text-desc">
-                                        <p>Lorem ipsum dolor sit amet,
-                                            consectetur
-                                            adipisicing elit. Voluptates optio
-                                            perspiciatis,
-                                            eum doloremque cum molestiae iusto
-                                            blanditiis
-                                            reiciendis incidunt pariatur,
-                                            eveniet odit
-                                            assumenda dignissimos, cumque quos
-                                            molestias
-                                            ipsa unde ex?</p>
-                                    </div>
-                                </div>
-                            </div>
+                            <app-proj-exp-item [project]="project"></app-proj-exp-item>
                         </ng-template>
                     </ng-container>
                 </swiper>
