added: hero UI modifications

--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -4,42 +4,25 @@
             <div class="name-skills" data-aos="fade-right"
                 data-aos-duration="2000">
 
-                <div class="name-title">
-                    <h1>Nicholas Chibuike-Eruba </h1>
-                    <h1 class="title">Bsc.
-                        Computing and
-                        Information Technology</h1>
-                </div>
+                <h2 style="font-weight: 400;">👋 Hi, I’m <span style="color: #6853EA;">Nicholas Chibuike-Eruba</span></h2>
+                
+                <h1>Software Developer</h1>
+                <h3 class="name-title">I’m currently taking Bsc. Computing and Information Technology, and I have experience in data analysis, machine learning, and web development</h3>
+               
 
                 <div class="skills">
-                    <p>I have experience in...</p>
-                    <ul>
-                        <li><a [routerLink]="['/articles','data-analysis']">Data
-                                Analysis</a></li>
-                        <li><a [routerLink]="['/articles','machine-learning']">Machine
-                                Learning</a></li>
-                        <li><a [routerLink]="['/articles','web-dev']">Web
-                                Development</a></li>
-                    </ul>
-                </div>
-
-                <div class="checkout">
-                    <!-- <p>Check out my
-                        app or
-                    </p> -->
-
-                    <div class="action-button">
-                        <a [routerLink]="['/articles','tutorial-showcaser']"
-                            class="btn-standard btn-small btn btn-main">Project
-                            Showcaser App</a>
-                        <a href="#" class="btn-standard btn-small btn btn-light">Download
-                            CV</a>
-                        <a href="https://github.com/El-Nico"
-                            target="_blank"
-                            class="btn-standard btn-small btn btn-light">Go
-                            to
-                            Github</a>
+                    <div class="hero-buttons">
+                        <a class="chat" href="#">Let's Chat!</a>
+                        <a class="cv" href="#">
+                            <img src="assets/download.svg" style="height: 30px; width: 40px;"/>
+                            <span class="download">Download CV</span>
+                        </a>
                     </div>
+                    <div class="hero-buttons">
+                        <a href="https://github.com/El-Nico"><img src="assets/linkedin.svg"/></a>
+                        <a href="https://github.com/El-Nico"><img src="assets/github.svg"/></a>
+                        <a class="projects" href="#">My Projects</a>
+                    </div>  
                 </div>
             </div>
             <div class="picture-showcase" data-aos="fade-left"
