--- a/src/app/home/hero/hero-responsive.css
+++ b/src/app/home/hero/hero-responsive.css
@@ -2,18 +2,19 @@
 @media (min-width: 300px) {
     main{
         flex-direction: column-reverse;
-        padding-top: 20px;
-        gap: 2vh;
+        padding-top: 10px;
+        gap: 0;
     }
     .name-skills {
         text-align: center;
         justify-content: center;
+        align-items: flex-start;
         flex-direction: column;
-        align-items: center;
-        width: 100%;
+        width: 80%;
     }
     .name-title {
-        text-align: center;
+        text-align: left;
+        font-weight: lighter;
     }
     img {
         width: 100%;
@@ -38,18 +39,19 @@
 @media (min-width: 481px) {
     main{
         flex-direction: column-reverse;
-        padding-top: 0px;
-        gap: 2vh;
+        padding-top: 10px;
+        gap: 0;
     }
     .name-skills {
         text-align: center;
         justify-content: center;
+        align-items: flex-start;
         flex-direction: column;
-        align-items: center;
-        width: 100%;
+        width: 75%;
     }
     .name-title {
-        text-align: center;
+        text-align: left;
+        font-weight: lighter;
     }
     h1 {
         font-size: 28px;
@@ -57,12 +59,13 @@
     }
     img {
         width: 100%;
-        height: 450px;
+        height: 320px;
     }
     .skills {
         margin-top: 20px;
         text-align: center;
         font-size: 12px;
+        width: 100%;
     }
     /* .picture-showcase {
         display: none;
@@ -84,12 +87,13 @@
     .name-skills {
         text-align: center;
         justify-content: center;
+        align-items: flex-start;
         flex-direction: column;
-        align-items: center;
-        width: 100%;
+        width: 60%;
     }
     .name-title {
-        text-align: center;
+        text-align: left;
+        font-weight: lighter;
     }
     h1 {
         font-size: 28px;
@@ -97,7 +101,7 @@
     }
     img {
         width: 100%;
-        height: 500px;
+        height: 370px;
     }
     .skills {
         margin-top: 20px;
@@ -118,17 +122,17 @@
 @media (min-width: 961px) {
     main{
         flex-direction: column-reverse;
-        padding-top: 100px;
     }
     .name-skills {
         text-align: center;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         flex-direction: column;
-        width: 100%;
+        width: 52%;
     }
     .name-title {
-        text-align: center;
+        text-align: left;
+        font-weight: lighter;
     }
     h1 {
         font-size: 28px;
@@ -136,7 +140,7 @@
     }
     img {
         width: 100%;
-        height: 470px;
+        height: 370px;
     }
     .skills {
         margin-top: 20px;
@@ -158,7 +162,6 @@
     main{
         flex-direction: row;
         justify-content: center;
-        padding-top: 100px;
     }
     .name-skills {
         text-align: center;
@@ -169,6 +172,7 @@
     }
     .name-title {
         text-align: left;
+        font-weight: lighter;
     }
     h1 {
         font-size: 42px;
@@ -208,6 +212,7 @@
     }
     .name-title {
         text-align: left;
+        font-weight: lighter;
     }
     h1 {
         font-size: 42px;
@@ -247,6 +252,7 @@
     }
     .name-title {
         text-align: left;
+        font-weight: lighter;
     }
     h1 {
         font-size: 42px;
