--- a/src/app/home/hero/hero.component.css
+++ b/src/app/home/hero/hero.component.css
@@ -8,8 +8,6 @@
     display: flex;
 }
 
-
-
 main{
     height: 100%;
     display: flex;
@@ -31,20 +29,6 @@ main{
 
 .skills>ul{
     display: flex;
-}
-
-.skills>ul>li{
-   
-}
-
-.skills>ul>li>a{
-/* #b38400
-#cc9600
-#e6a900 */
-    color: #e6a900 ;
-    font-weight: bold;
-    padding-inline: 1rem;
-    padding-bottom: 0.5rem;
 }
 
 .skills>ul>li>a:first-child{
@@ -100,4 +84,108 @@ img{
 
 .name-skills {
     display: flex;
+    gap: 2rem;
+
+    > h1 {
+        font-size: clamp(1.8rem, 3.5vw, 5rem);
+    }
+
+    > h2 {
+        font-size: clamp(1rem, 2vw, 1.8rem);
+    }
+
+    > h3{
+        font-size: clamp(1rem, 0.99vw, 2rem);
+    }
+}
+
+.name-title{
+    width: 80%;
+}
+
+.skills{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+
+    > .hero-buttons{
+
+        display: flex;
+        flex-direction: row;
+        gap: 1.5rem;
+
+        > a {
+            > img {
+                height: 50px;
+            }
+        }
+
+        > .chat{
+            background-color: #FFBC00;
+            padding: 1.5vh 3vw;
+            font-weight: 600;
+            border-radius: 40px;
+            box-shadow: 0px 0px 35px 0px rgba(220,242,180,0.21);
+            -webkit-box-shadow: 0px 0px 35px 0px rgba(220,242,180,0.21);
+            -moz-box-shadow: 0px 0px 35px 0px rgba(220,242,180,0.21);
+            font-size: clamp(1rem, 1vw, 2.5rem);
+        }
+
+        > .cv{
+            border: #FFBC00 1px solid;
+            border-radius: 40px;
+            padding: 1.5vh 2.5vw;
+            color: white;
+            font-size: clamp(1rem, 1vw, 2.5rem);
+            display: flex; 
+            gap: 5px;
+        }
+
+        > .projects{
+            line-height: 50px;
+            color: #647396;
+            border: #647396 1px solid;
+            border-radius: 40px;
+            padding: 0vh 1rem;
+            font-size: clamp(1rem, 1vw, 2.5rem);
+        }
+    }
+}
+
+@media (max-width: 1025px){
+    .name-skills{
+        gap: 1rem;
+        align-items: flex-start;
+
+        > h3{
+            width: 100%;
+        }
+    }
+
+    .skills{
+        gap: 1rem;
+    }
+}
+
+@media (max-width: 641px){
+
+    .skills{
+
+        >.hero-buttons:nth-child(1){
+
+            flex-direction: column;
+            width: 100%;
+            gap: 1rem;
+            
+            > .cv{
+                justify-content: center;
+
+                > *{
+                    position: relative;
+                    left: -10px;
+                }
+            }
+        }
+    }
 }
