--- a/src/app/shared/navbar/navbar-responsive.css
+++ b/src/app/shared/navbar/navbar-responsive.css
@@ -15,6 +15,7 @@
             background: linear-gradient(90deg,#1e273e 0%,#0f172a 100%);
             position: absolute;
             left: 0;
+            top: 45px;
             display: flex;
             flex-direction: column;
             width: 100%;
