--- a/src/styles.css
+++ b/src/styles.css
@@ -153,7 +153,8 @@ ul {
 }
 
 .background-gradient {
-  background: linear-gradient(90deg,#1e273e 0%,#0f172a 100%);
+  background-color: #10182B;
+  /* background: linear-gradient(90deg,#1e273e 0%,#0f172a 100%); */
 }
 
 .color-white {
