--- a/src/styles.css
+++ b/src/styles.css
@@ -173,6 +173,7 @@ ul {
   border-radius: 14px;
   margin: 0px 1px 1px 1px;
   background-color: white;
+  height: 100%;
 }
 
 .background-main, .bg-primary {
